# sample_calculator_dify

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
docs/: usage.md
src/calculator/: __init__.py  calculator.py  cli.py
tests/: __init__.py  test_calculator.py
